<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="8dp"
    android:background="@drawable/pitch"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        android:textColor="#ffffff"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:textColor="#ffffff"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/homeTeam"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="8dp"
        android:inputType="text"
        android:background="#84ffffff"
        android:hint="@string/hintHome"/>

    <EditText
        android:id="@+id/guestTeam"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="8dp"
        android:inputType="text"
        android:background="#84ffffff"
        android:layout_marginTop="8dp"
        android:hint="@string/hintGuest"/>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:text="@string/start"/>

</LinearLayout>