<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp"
    tools:context=".ScoreActivity"
    android:background="@drawable/pitch">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textAllCaps="true"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/guest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/guest"
                android:textAllCaps="true"
                android:textColor="#000000" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/homeTeam_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text=""
                android:textAllCaps="true"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/vs"
                android:textAllCaps="true"
                android:gravity="center"/>

            <TextView
                android:id="@+id/guestTeam_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text=""
                android:textAllCaps="true"
                android:textColor="#000000" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_pts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="40sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/guest_pts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="40sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:onClick="startTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play"
                android:contentDescription="@string/todo" />

            <ImageButton
                android:onClick="pauseTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pause"
                android:contentDescription="@string/todo" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="24sp" />

            <ImageButton
                android:onClick="restTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/resettime"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:onClick="touch_down_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/touch_down"/>

                <Button
                    android:onClick="field_goal_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_goal"/>

                <Button
                    android:onClick="safety_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safety"/>

                <Button
                    android:onClick="extra_pts_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_points"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:onClick="touch_down_away"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/touch_down"/>

                <Button
                    android:onClick="field_goal_away"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_goal"/>

                <Button
                    android:onClick="safety_away"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safety"/>

                <Button
                    android:onClick="extra_pts_away"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_points"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:onClick="reset"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/reset"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</ScrollView>